[tool.poetry]
name = "pypi-server"

# Dummy version will be rewritten by poem-plugins
version = "0.0.0"
description = "PyPI server for all"
authors = ["Dmitry Orlov <me@mosquito.su>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/mosquito/pypi-server/"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: MacOS',
    'Operating System :: POSIX',
    'Programming Language :: Python',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Communications :: Email',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: HTTP Servers',
    'Topic :: Software Development',
    'Topic :: Software Development :: Build Tools',
    'Topic :: Software Development :: Version Control',
    'Topic :: System',
    'Topic :: System :: Software Distribution',
]
packages = [
    {include = "pypi_server"},
    {include = "pypi_server_local_storage"},
    {include = "pypi_server_package_proxy"},
]

[tool.poetry.dependencies]
python = "^3.10"
aiomisc = {extras = ["aiohttp"], version = "^17.1.4"}
aiohttp = "3.8.1"
argclass = "^0.9.2"
aiochannel = "^1.2.1"

[tool.poetry.group.dev.dependencies]
aiomisc-pytest = "^1.1.1"
pytest-cov = "^4.0.0"
pytest-subtests = "^0.10.0"

[tool.poetry.scripts]
pypi-server = "pypi_server.__main__:main"

[tool.poetry.plugins.pypi_server]
local_storage = "pypi_server_local_storage"
package_proxy = "pypi_server_package_proxy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poem-plugins.version]
provider = "git"
update_pyproject = false
write_version_file = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = ["pypi_server", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
